Revamp website to Digital Marketing Agency

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="VoxSphere - Intelligent IVR and AI Call Concierge Systems" />
-  <title>VoxSphere | Future of Voice</title>
+  <meta name="description" content="VoxSphere - Full-Service Digital Marketing Agency for Ambitious Brands" />
+  <title>VoxSphere | Digital Marketing Agency</title>
 </head>
 
 <body>
